--- a/css/styles.css
+++ b/css/styles.css
@@ -6,19 +6,33 @@
 .link {
   text-decoration: none;
 }
+:root {
+  --main-background-color: #ffffff;
+  --footer-beckgrond-color: #2e2f42;
+  --team-section-color: #f4f4fd;
+  --hover-focus-color: #404bbf;
+  --title-color: #2e2f42;
+  --text-color: #434455;
+  --text-footer-color: #e7e9fc;
+  --blue-text-color: #4d5ae5;
+}
 body {
   font-family: "Roboto", sans-serif;
+  font-size: 16px;
+
+  background-color: var(--main-background-color);
 }
+
 .menu-link {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-color);
 }
 .menu-link:hover,
 .menu-link:focus {
-  color: #404bbf;
+  color: var(--hover-focus-color);
 }
 
 .header {
@@ -26,83 +40,186 @@ body {
 
 .pege-nav {
 }
-
+/* ===============LOGO============== */
 .logo {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--blue-text-color);
 }
 
+.header-logo-studio {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--title-color);
+}
+.footer-logo-studio {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--team-section-color);
+}
+
+/* ===============/LOGO/============== */
 .menu {
 }
 .menu-item {
 }
-
+/* ==========Contacts========= */
+.address {
+  font-style: normal;
+}
 .phone-number {
-  font-weight: 400;
   font-size: 16px;
-  line-height: 1 5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text-color);
+}
+.phone-number:hover,
+.phone-number:focus {
+  color: var(--hover-focus-color);
 }
 
 .mail {
-  font-weight: 400;
   font-size: 16px;
-  line-height: 1, 5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text-color);
 }
 
 .mail:hover,
 .mail:focus {
-  color: #404bbf;
+  color: var(--hover-focus-color);
 }
+/* ==========/Contacts/========= */
 .button-main {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1, 5px;
+  line-height: 1.5;
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
+  font-family: inherit;
 
-  color: #ffffff;
-  background: #4d5ae5;
+  color: var(--main-background-color);
+  background: var(--blue-text-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
 }
 .button-main:hover,
 .button-main:focus {
-  background: #404bbf;
+  background: var(--hover-focus-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
 .section-hero {
-  background: #2e2f42;
+  background: var(--title-color);
 }
 .text-hero {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1, 07;
+  line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--main-background-color);
 }
 .title-text {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--title-color);
+  text-align: center;
+  text-transform: capitalize;
 }
+
 /* component */
 .title-description {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1, 2;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--title-color);
 }
+
 .text-description {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text-color);
+}
+.footer-text-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-footer-color);
+}
+.footer {
+  background-color: var(--footer-beckgrond-color);
+}
+/* ==============Team============ */
+.team-section {
+  background-color: var(--team-section-color);
+}
+.team-img {
+  background-color: var(--main-background-color);
+}
+.team-text {
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+}
+.team-secondary-text {
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
 }
 
-/* /component */
+/* ========== portfolio========= */
+.portfolio-buttons {
+  color: var(--blue-text-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  width: 126px;
+  height: 48px;
+  background: var(--team-section-color);
+  border: 1px solid var(--text-footer-color);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.portfolio-buttons:hover,
+.portfolio-buttons:focus {
+  color: var(--main-background-color);
+  background: var(--hover-focus-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
